--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-.btn2{
-    width: 50px;
-    height: 50px;
-    background-color: rgba(250, 139, 19, 1);
-    border: none;
-    color: white;
-}
 
 .btn{
     width: 50px;
@@ -12,6 +5,11 @@
     background-color: rgba(250, 139, 19, 1);
     border: none;
     color: white;
+}
+
+.btn:active{
+   width: 60px;
+   height: 60px;
 }
 
 
